# drone_pi

install/: local_setup.sh  setup.sh
install/MPU6050_package/share/MPU6050_package/: package.bash  package.zsh
install/mpu6050_publisher/share/mpu6050_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/PID_package/: CMakeLists.txt  package.xml
src/devcontainer/: Dockerfile  devcontainer.json
src/motor_package/: CMakeLists.txt  package.xml
src/motor_package/include/libmotor/: Motor.hpp
src/motor_package/src/: Motor.cpp  motor_subscriber.cpp
src/mpu6050_publisher/: CMakeLists.txt  package.xml
src/mpu6050_publisher/src/: MPU6050.cpp  MPU6050_publisher.cpp
